[tool.poetry]
name = "flownet2-pytorch"
version = "0.1.0"
description = ""
authors = ["유대현 <dh.you@60hz.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
numpy = "^2.1.2"
scipy = "^1.14.1"
scikit-image = "^0.24.0"
tensorboardx = "^2.6.2.2"
colorama = "^0.4.6"
tqdm = "^4.66.5"
setproctitle = "^1.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
